# python-poppler

./: .buildinfo  .gitignore  CMakeLists.txt  MANIFEST.in  NEWS.txt  README.md  TODO  changelog.html  contribution.html  genindex.html  index.html  installation.html  meson.build  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sitemap.xml  tox.ini  usage.html
.doctrees/: changelog.doctree  contribution.doctree  environment.pickle  index.doctree  installation.doctree  usage.doctree
.doctrees/api/: modules.doctree  poppler.destination.doctree  poppler.doctree  poppler.document.doctree  poppler.embeddedfile.doctree  poppler.font.doctree  poppler.image.doctree  poppler.page.doctree  poppler.pagerenderer.doctree  poppler.pagetransition.doctree  poppler.rectangle.doctree  poppler.toc.doctree  poppler.utilities.doctree
.github/workflows/: build_and_test.yml  documentation.yml  publish.yml  pythonpackage.yml  pythonpublish.yml
_sources/: changelog.rst.txt  index.rst.txt  installation.rst.txt  usage.rst.txt
_sources/api/: poppler.destination.rst.txt  poppler.document.rst.txt  poppler.embeddedfile.rst.txt  poppler.font.rst.txt  poppler.image.rst.txt  poppler.page.rst.txt  poppler.pagerenderer.rst.txt  poppler.pagetransition.rst.txt  poppler.rectangle.rst.txt  poppler.rst.txt  poppler.toc.rst.txt  poppler.utilities.rst.txt
api/: modules.html  poppler.destination.html  poppler.document.html  poppler.embeddedfile.html  poppler.font.html  poppler.html  poppler.image.html  poppler.page.html  poppler.pagerenderer.html  poppler.pagetransition.html  poppler.rectangle.html  poppler.toc.html  poppler.utilities.html
docs/: .buildinfo  changelog.rst  conf.py  contribution.rst  genindex.html  index.html  index.rst  installation.html  installation.rst  modules.html  objects.inv  poppler.cpp.html  poppler.cpp.rst  poppler.html  py-modindex.html  search.html  searchindex.js  usage.html  usage.rst
docs/.doctrees/: environment.pickle  index.doctree  installation.doctree  modules.doctree  poppler.cpp.doctree  poppler.doctree
docs/_sources/: index.rst.txt  modules.rst.txt  poppler.cpp.rst.txt  poppler.rst.txt
docs/api/: modules.rst
docsrc/: conf.py  index.rst  make.bat  modules.rst  poppler.rst  usage.rst
src/: meson.build
src/cpp/: destination.cpp  document.cpp  embedded_file.cpp  font.cpp  global.cpp  image.cpp  meson.build  page.cpp  page_renderer.cpp  page_transition.cpp  rectangle.cpp  toc.cpp  version.cpp  version.h
src/poppler/: __init__.py  _utilities.py  _version.py  _version.py.in  destination.py  document.py  embeddedfile.py  font.py  image.py  meson.build  page.py  pagerenderer.py  pagetransition.py  rectangle.py  toc.py  utilities.py  version.py
subprojects/: pybind11.wrap
tests/: __init__.py  conftest.py  test_destination.py  test_document.py  test_font.py  test_image.py  test_page.py  test_pagerenderer.py  test_pagetransition.py  test_rectangle.py  test_toc.py  test_version.py
tests/data/: .gitignore  sample.tex
