[build-system]
build-backend = 'mesonpy'
requires = ['meson-python', 'meson >= 1.0.0', 'wheel']

[project]
name = 'python-poppler'
# version = '0.4.0'
description = 'A Python binding to poppler-cpp'
readme = 'README.md'
requires-python = '>=3.6'
license = {file = 'LICENSE.txt'}
authors = [
    {name = 'Charles Brunet', email='charles@cbrunet.net'}
]
keywords = [ 'pdf', 'poppler' ]
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GNU General Public License v2 (GPLv2)',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
dynamic = [ 'version' ]

[project.urls]
documentation = 'https://cbrunet.github.io/python-poppler'
repository = 'https://github.com/cbrunet/python-poppler'
tracker = 'https://github.com/cbrunet/python-poppler/issues'

[project.optional-dependencies]
test = [ 'pytest' ]
doc = [ 'sphinx', 'sphinx-issues', 'sphinx-material', 'gph-import' ]
dev = [ 'black', 'flake8', 'flake8-bugbear' ]
